--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </a>
 
     <!-- Logo centralizada -->
-    <img src="assets/selfLOGO.png" alt="Logo Self Park" class="nav-logo" id="homeLogo" />
+    <img src="assets/logoAZUL_letraBRANCA.png" alt="Logo Self Park" class="nav-logo" id="homeLogo" />
 
     <!-- Botões à direita -->
     <nav class="nav-links">
@@ -81,7 +81,7 @@
         </div>
       </div>
       <div class="face face2">
-        <h2>02</h2>
+        <img src="assets/iconeSEGURANÇA.png" alt="">
       </div>
     </div>
 
@@ -104,7 +104,7 @@
   <!-- FOOTER -->
    <footer class="footer">
     <div class="footer-content">
-      <img src="assets/selfLOGO.png" alt="Logo Self Park" class="footer-logo" id="footerLogo" />
+      <img src="assets/logoAZUL_letraBRANCA.png" alt="Logo Self Park" class="footer-logo" id="footerLogo" />
       <div class="footer-buttons">
         <button class="nav-btn" id="footerReservar">Reservar</button>
         <button class="nav-btn" id="footerLogin">Login</button>
