--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="face face2">
-        <h2>01</h2>
+        <img src="assets/iconePRODUTIVIDADE.png" alt="">
       </div>
     </div>
 
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div class="face face2">
-        <h2>03</h2>
+        <img src="assets/iconeECONOMIA.png" alt="">
       </div>
     </div>
   </div>
