--- a/eventos.html
+++ b/eventos.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 
-  
+ 
+
 
   <header class="navbar" id="navbar">
     <div class="nav-container">
@@ -22,6 +23,10 @@
       </nav>
     </div>
   </header>
+
+  <div id="loadingScreen">
+    <div class="spinner"></div>
+  </div>
 
   <!-- ======== CONTEÚDO PRINCIPAL ======== -->
   <aside class="filter-sidebar" id="filterSidebar">
