--- a/reservas.html
+++ b/reservas.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+    <div id="loadingScreen">
+    <div class="spinner"></div>
+  </div>
+
     <header class="navbar" id="navbar">
     <div class="nav-container">
       <img src="assets/selfLOGO.png" alt="Logo Self Park" class="nav-logo" id="homeLogo">
@@ -33,35 +37,47 @@
  <section class="icon-grid">
     <a href="eventos.html">
       <div class="item" id="hotel">
-        <img src="assets/pizza.webp" alt="Hotel">
+        <img src="assets/hoteis-removebg-preview.png" alt="Hotel">
         <span>Hotel</span>
       </div>
     </a>
     <a href="eventos.html">
       <div class="item" id="parque">
-        <img src="assets/pizza.webp" alt="Parque">
+        <img src="assets/parque-removebg-preview.png" alt="Parque">
         <span>Parque</span>
       </div>
     </a>
     <a href="eventos.html">
       <div class="item" id="shopping">
-        <img src="assets/pizza.webp" alt="Shopping">
+        <img src="assets/online-shopping-removebg-preview.png" alt="Shopping">
         <span>Shopping</span>
       </div>
     </a>
     <a href="eventos.html">
       <div class="item" id="estadio">
-        <img src="assets/pizza.webp" alt="Estádio">
+        <img src="assets/estadio-removebg-preview.png" alt="Estádio">
         <span>Estádio</span>
       </div>
     </a>
     <a href="eventos.html">
       <div class="item" id="eventos">
-        <img src="assets/pizza.webp" alt="Eventos">
+        <img src="assets/evento-removebg-preview.png" alt="Eventos">
         <span>Eventos</span>
       </div>
     </a>
   </section>
+
+  <footer class="footer">
+    <div class="footer-content">
+      <img src="assets/logoAZUL_letraBRANCA.png" alt="Logo Self Park" class="footer-logo" id="footerLogo" />
+      <div class="footer-buttons">
+        <button class="nav-btn" id="footerReservar">Reservar</button>
+        <button class="nav-btn" id="footerLogin">Login</button>
+        <button class="nav-btn" id="footerCadastro">Cadastre-se</button>
+      </div>
+      <p>© 2025 Self Park | Todos os direitos reservados</p>
+    </div>
+  </footer>
 
   
 
