--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header class="navbar" id="navbar">
   <div class="nav-container">
     <!-- Botão com ícone temporário (lado esquerdo) -->
-    <a href="login.html" class="nav-photo-btn" title="Login">
+    <a href="#" class="nav-photo-btn" title="Login">
       <i class="fa-solid fa-user"></i>
     </a>
 
