--- a/eventos.html
+++ b/eventos.html
@@ -81,56 +81,36 @@
     </header>
 
     <section class="row" id="eventsGrid">
-      <a href="datetime.html" class="card" data-city="sp" data-type="show" data-start="2025-11-04" data-end="2025-12-11">
-        <div class="img-container">
-          <img src="https://picsum.photos/640/400?random=11" alt="Vozes Negras">
-        </div>
-        <div class="info">
-          <h3>Vozes Negras</h3>
-          <p class="date"><span class="material-icons">event</span> 04/11 a 11/12/2025 • São Paulo</p>
-        </div>
-      </a>
+  <a href="datetime.html" class="card" data-city="sp" data-type="show" data-start="2025-11-04" data-end="2025-12-11" data-event-id="1234" data-local-id="32">
+    <div class="img-container">
+      <img src="https://picsum.photos/640/400?random=11" alt="Vozes Negras">
+    </div>
+    <div class="info">
+      <h3>Vozes Negras</h3>
+      <p class="date"><span class="material-icons">event</span> 04/11 a 11/12/2025 • São Paulo</p>
+    </div>
+  </a>
 
-      <a href="evento2.html" class="card" data-city="sp" data-type="esporte" data-start="2025-11-06" data-end="2025-11-06">
-        <div class="img-container">
-          <img src="https://picsum.photos/640/400?random=12" alt="Palmeiras x Santos">
-        </div>
-        <div class="info">
-          <h3>Palmeiras x Santos</h3>
-          <p class="date"><span class="material-icons">event</span> 06/11/2025 • Allianz Parque</p>
-        </div>
-      </a>
+  <a href="datetime.html" class="card" data-city="sp" data-type="esporte" data-start="2025-11-06" data-end="2025-11-06" data-event-id="1235" data-local-id="32">
+    <div class="img-container">
+      <img src="https://picsum.photos/640/400?random=12" alt="Palmeiras x Santos">
+    </div>
+    <div class="info">
+      <h3>Palmeiras x Santos</h3>
+      <p class="date"><span class="material-icons">event</span> 06/11/2025 • Allianz Parque</p>
+    </div>
+  </a>
 
-      <a href="evento3.html" class="card" data-city="sp" data-type="show" data-start="2025-11-06" data-end="2025-11-06">
-        <div class="img-container">
-          <img src="https://picsum.photos/640/400?random=13" alt="Moyses Rico e Iara Bicalho">
-        </div>
-        <div class="info">
-          <h3>Moyses Rico e Iara Bicalho</h3>
-          <p class="date"><span class="material-icons">event</span> 06/11/2025 • Villa Country</p>
-        </div>
-      </a>
-
-      <a href="evento4.html" class="card" data-city="rj" data-type="teatro" data-start="2025-11-10" data-end="2025-11-13">
-        <div class="img-container">
-          <img src="https://picsum.photos/640/400?random=14" alt="Peça Teatral">
-        </div>
-        <div class="info">
-          <h3>Peça Teatral</h3>
-          <p class="date"><span class="material-icons">event</span> 10/11 a 13/11/2025 • Rio</p>
-        </div>
-      </a>
-
-      <a href="evento5.html" class="card" data-city="bh" data-type="exposicao" data-start="2025-11-20" data-end="2025-12-05">
-        <div class="img-container">
-          <img src="https://picsum.photos/640/400?random=15" alt="Exposição">
-        </div>
-        <div class="info">
-          <h3>Exposição de Arte</h3>
-          <p class="date"><span class="material-icons">event</span> 20/11 a 05/12/2025 • BH</p>
-        </div>
-      </a>
-    </section>
+  <a href="datetime.html" class="card" data-city="sp" data-type="show" data-start="2025-11-06" data-end="2025-11-06" data-event-id="1236" data-local-id="32">
+    <div class="img-container">
+      <img src="https://picsum.photos/640/400?random=13" alt="Moyses Rico e Iara Bicalho">
+    </div>
+    <div class="info">
+      <h3>Moyses Rico e Iara Bicalho</h3>
+      <p class="date"><span class="material-icons">event</span> 06/11/2025 • Villa Country</p>
+    </div>
+  </a>
+  </section>
   </main>
 
   <script src="eventos.js"></script>
