--- a/confirmação.html
+++ b/confirmação.html
@@ -6,7 +6,7 @@
   <title>Confirmação de Reserva - Self Park</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="confirmação.css"> 
+  <link rel="stylesheet" href="CSS/confirmação.css"> 
   </head>
 <body>
 
@@ -76,6 +76,6 @@
     
   </main>
 
-  <script src="confirmação.js"></script>
+  <script src="JS/confirmação.js"></script>
 </body>
 </html>
