--- a/eventos.html
+++ b/eventos.html
@@ -6,7 +6,7 @@
   <title>Eventos</title>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="eventos.css">
+  <link rel="stylesheet" href="CSS/eventos.css">
 </head>
 <body>
 
@@ -113,7 +113,7 @@
   </section>
   </main>
 
-  <script src="eventos.js"></script>
+  <script src="JS/eventos.js"></script>
 </body>
 </html>
 
