--- a/reservas.html
+++ b/reservas.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Buscar Local ou Evento</title>
-  <link rel="stylesheet" href="reservas.css">
+  <link rel="stylesheet" href="CSS/reservas.css">
   
 </head>
 <body>
@@ -81,11 +81,7 @@
 
   
 
-  <script>
-    function buscar() {
-      const valor = document.getElementById('searchInput').value.trim();
-      if (valor) alert(`Buscando por: ${valor}`);
-    }
+  <script src="JS/reservas.js">
   </script>
 
 </body>
