--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Self Park</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="CSS/index.css" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
@@ -208,37 +208,16 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="JS/index.js">
+  </script>
 
 
   <script>
-  // Redirecionamentos personalizados
-  document.getElementById("reservarBtn").onclick = function() {
-    window.location.href = "reservas.html"; // Página de reservas
-  };
 
-  document.getElementById("loginBtn").onclick = function() {
-    window.location.href = "login.html"; // Página de login
-  };
-
-  document.getElementById("cadastroBtn").onclick = function() {
-    window.location.href = "cadastro.html"; // Página de cadastro
-  };
 </script>
 
 <script>
-  const frase1 = document.getElementById("frase1");
-  const frase2 = document.getElementById("frase2");
 
-  frase1.classList.add("show");
-
-  setTimeout(() => {
-    frase1.classList.add("hide-up");
-
-    setTimeout(() => {
-      frase2.classList.add("show");
-    }, 900);
-  }, 5000);
 </script>
 
 
