--- a/login.html
+++ b/login.html
@@ -6,8 +6,7 @@
   <title>Login</title>
   <link rel="shortcut icon" href="assets/inconeeeeeeeee.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="styleLogin.css">
+  <link rel="stylesheet" href="CSS/login.css">
   <style>
     
   </style>
@@ -47,19 +46,7 @@
     </div>
   </section>
 
-  <script>
-    // Redirecionamentos personalizados
-    document.getElementById("homeBtn").onclick = function() {
-      window.location.href = "index.html"; // Página Home
-    };
-
-    document.getElementById("sobreBtn").onclick = function() {
-      window.location.href = "sobre.html"; // Página Sobre
-    };
-
-    document.getElementById("contatoBtn").onclick = function() {
-      window.location.href = "contato.html"; // Página Contato
-    };
+  <script src="JS/login.js">
   </script>
 
 </body>
