--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Botões à direita -->
     <nav class="nav-links">
       <button class="nav-btn" id="reservarBtn">Reservar</button>
-      <button class="nav-btn" id="loginBtn">Login</button>
+      <button class="nav-btn" id="loginBtn">Login</button>>
       <button class="nav-btn" id="cadastroBtn">Cadastre-se</button>
     </nav>
   </div>
