--- a/login.html
+++ b/login.html
@@ -41,7 +41,7 @@
       </form>
       <div class="forgot-password">Esqueceu sua senha?</div>
       <div class="register-text">
-        Novo por aqui? <a href="#">Crie uma conta</a>
+        Novo por aqui? <a href="cadastro.html">Crie uma conta</a>
       </div>
     </div>
   </section>
