--- a/confirmação.html
+++ b/confirmação.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Confirmação de Reserva - Self Park</title>
+    <link rel="shortcut icon" href="assets/logoAZUL_letraBRANCA.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="CSS/confirmação.css"> 
@@ -11,70 +12,113 @@
 <body>
 
   <header class="navbar" id="navbar">
-    <div class="nav-container">
-      <img src="assets/selfLOGO.png" alt="Logo Self Park" class="nav-logo" id="homeLogo">
-      <nav class="nav-links">
-        <button class="nav-btn" id="reservarBtn"><a href="reservas.html" style="color:inherit;text-decoration:none;">Reservar</a></button>
-        <button class="nav-btn" id="loginBtn"><a href="login.html" style="color:inherit;text-decoration:none;">Login</a></button>
-        <button class="nav-btn" id="cadastroBtn"><a href="cadastro.html" style="color:inherit;text-decoration:none;">Cadastre-se</a></button>
-      </nav>
+  <div class="nav-container">
+
+    <!-- LOGO CENTRALIZADA -->
+    <img src="assets/logoAZUL_letraBRANCA.png" alt="Logo" class="nav-logo"
+      onclick="window.location.href='index.html'">
+
+    <!-- BOTÃO HAMBÚRGUER (iOS Style) -->
+    <div class="hamburger" id="hamburgerBtn">
+  <span class="line top"></span>
+  <span class="line middle"></span>
+  <span class="line bottom"></span>
+</div>
+
+    <!-- LINKS DESKTOP -->
+    <nav class="nav-links desktop-only">
+      <a href="reservas.html" class="nav-btn">Reservar</a>
+      <a href="login.html" class="nav-btn">Login</a>
+      <a href="cadastro.html" class="nav-btn">Cadastre-se</a>
+    </nav>
+
+    <!-- MENU MOBILE (FULLSCREEN iOS) -->
+    <nav class="mobile-menu" id="mobileMenu">
+      <a href="reservas.html">Reservar</a>
+      <a href="login.html">Login</a>
+      <a href="cadastro.html">Cadastre-se</a>
+    </nav>
+
+  </div>
+</header>
+
+
+  <main class="wallet-container">
+
+  <section class="wallet-card">
+
+    <!-- Lado esquerdo: Detalhes do Evento -->
+    <div class="wallet-left">
+
+      <div class="evento-header">
+        <span class="material-icons evento-icone">local_activity</span>
+        <div>
+          <h2 id="nomeEvento">Carregando...</h2>
+          <p class="evento-local">
+            Local do Evento • ID <span id="localIdDisplay"></span>
+          </p>
+        </div>
+      </div>
+
+      <div class="horarios-box">
+        <div class="horario-item">
+          <p class="label">Entrada</p>
+          <p class="data" id="dataEntrada">--/--/----</p>
+          <p class="hora" id="horaEntrada">--:--</p>
+        </div>
+
+        <div class="horario-item">
+          <p class="label">Saída</p>
+          <p class="data" id="dataSaida">--/--/----</p>
+          <p class="hora" id="horaSaida">--:--</p>
+        </div>
+      </div>
+
+      <div class="duracao-bar">
+        <span class="material-icons">timer</span>
+        <p>Duração: <span id="duracaoReserva">--h --m</span></p>
+      </div>
+
     </div>
-  </header>
 
-  <main class="main-content-confirmacao">
-    <div class="card-confirmacao">
-      <div class="header-confirmacao">
-        <span class="material-icons check-icon">check_circle</span>
-        <h2>Confirmação da sua Reserva</h2>
-        <p>Revise os detalhes da sua reserva de vaga.</p>
-      </div>
+    <!-- Lado direito: Pagamento -->
+    <div class="wallet-right">
 
-      <div class="detalhes-evento">
-        <span class="material-icons event-icon">local_activity</span>
-        <h3 id="nomeEvento">Carregando Nome do Evento...</h3>
-        <p id="localEvento">Local do Evento (ID: <span id="localIdDisplay"></span>)</p>
-      </div>
-
-      <div class="detalhes-reserva">
-        <div class="resumo-tempo">
-          <div class="item-tempo">
-            <span class="material-icons">login</span>
-            <p>Entrada:</p>
-            <p class="data-hora" id="dataEntrada">--/--/----</p>
-            <p class="data-hora hora" id="horaEntrada">--:--</p>
-          </div>
-          <div class="item-tempo">
-            <span class="material-icons">logout</span>
-            <p>Saída:</p>
-            <p class="data-hora" id="dataSaida">--/--/----</p>
-            <p class="data-hora hora" id="horaSaida">--:--</p>
-          </div>
+      <div class="preco-box">
+        <div class="preco-item">
+          <span>Valor da Reserva</span>
+          <span id="valorReserva">R$ 55,00</span>
         </div>
-        
-        <div class="duracao-total">
-          <span class="material-icons">timer</span>
-          <p>Duração Total:</p>
-          <p class="duracao" id="duracaoReserva">--h --m</p>
-        </div>
-      </div>
 
-      <div class="detalhes-preco">
-        <div class="item-preco">
-          <span>Valor da Reserva:</span>
-          <span id="valorReserva">R$ 55,00</span> </div>
-        <div class="item-preco total">
-          <span>Total a Pagar:</span>
+        <div class="preco-item total">
+          <span>Total</span>
           <span id="valorTotal">R$ 55,00</span>
         </div>
       </div>
 
-      <button class="btn-prossegir" id="btnProsseguir">
-        Prosseguir para o Pagamento
-        <span class="material-icons">arrow_forward</span>
+      <button class="btn-pagar" id="btnProsseguir">
+        Prosseguir com o Pagamento
+        <span class="material-icons">arrow_forward_ios</span>
       </button>
+
     </div>
-    
-  </main>
+
+  </section>
+
+</main>
+
+<script>
+  const hamburger = document.getElementById("hamburgerBtn");
+  const mobileMenu = document.getElementById("mobileMenu");
+
+  hamburger.addEventListener("click", () => {
+    hamburger.classList.toggle("active");
+    mobileMenu.classList.toggle("open");
+  });
+</script>
+
+
+
 
   <script src="JS/confirmação.js"></script>
 </body>
