--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Self Park</title>
+  <link rel="shortcut icon" href="assets/logoAZUL_letraBRANCA.png">
   <link rel="stylesheet" href="CSS/index.css" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 </head>
 <body>
+  <html>
 
   <!-- NAVBAR -->
   <header class="navbar" id="navbar">
@@ -25,7 +27,7 @@
     <!-- Botões à direita -->
     <nav class="nav-links">
       <button class="nav-btn" id="reservarBtn">Reservar</button>
-      <button class="nav-btn" id="loginBtn">Login</button>>
+      <button class="nav-btn" id="loginBtn">Login</button>
       <button class="nav-btn" id="cadastroBtn">Cadastre-se</button>
     </nav>
   </div>
@@ -224,14 +226,6 @@
   </script>
 
 
-  <script>
-
-</script>
-
-<script>
-
-</script>
 
 
-</body>
-</html>
+
