--- a/cadastro.html
+++ b/cadastro.html
@@ -5,14 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Registro</title>
   <link rel="stylesheet" href="CSS/cadastro.css" />
+ <link rel="shortcut icon" href="assets/logoAZUL_letraBRANCA.png">
+
 </head>
 <body>
   <!-- NAVBAR -->
   <nav class="navbar">
     <div class="nav-container">
-      <img src="assets/logoAZUL_letraBRANCA.png" alt="Logo" class="nav-logo" />
+      <img src="assets/logoAZUL_letraBRANCA.png" alt="Logo" class="nav-logo" onclick="window.location.href='index.html'">
       <div class="nav-links">
-        <button class="nav-btn">Login</button>
+        <button class="nav-btn"onclick="window.location.href='login.html'">Login</button>
       </div>
     </div>
   </nav>
@@ -35,11 +37,6 @@
         </div>
 
         <div>
-          <label for="email">E-mail</label>
-          <input type="email" id="email" placeholder="Digite seu e-mail" required />
-        </div>
-
-        <div>
           <label for="senha">Senha</label>
           <input type="password" id="senha" placeholder="Crie uma senha" required />
         </div>
@@ -54,6 +51,11 @@
 
       <p class="register-text">Já tem conta? <a href="login.html">Faça login</a></p>
     </div>
+    
   </section>
+  
+
+
+
 </body>
 </html>
