--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="shortcut icon" href="assets/inconeeeeeeeee.png">
+  <link rel="shortcut icon" href="assets/logoAZUL_letraBRANCA.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="CSS/login.css">
   <style>
@@ -15,11 +15,14 @@
 
   <nav class="navbar">
     <div class="nav-container">
-      <img src="assets/selfLOGO.png" alt="Logo" class="nav-logo">
+      <img src="assets/logoAZUL_letraBRANCA.png" alt="Logo" class="nav-logo" onclick="window.location.href='index.html'">
       <div class="nav-links">
-        <button class="nav-btn" id="homeBtn">Início</button>
-        <button class="nav-btn" id="sobreBtn">Sobre</button>
-        <button class="nav-btn" id="contatoBtn">Contato</button>
+
+
+        <!--<button class="nav-btn" id="contatoBtn">Contato</button> colocar no footer  -->
+
+
+        
       </div>
     </div>
   </nav>
