--- a/reservas.html
+++ b/reservas.html
@@ -5,9 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Buscar Local ou Evento</title>
   <link rel="stylesheet" href="CSS/reservas.css">
+  <link rel="shortcut icon" href="assets/logoAZUL_letraBRANCA.png">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   
 </head>
 <body>
+  
+  
+
+  <video class="video-fundo" autoplay muted loop>
+  <source src="assets/videoFundo.mp4" type="video/mp4">
+</video>
+
+<div class="video-overlay"></div>
 
     <div id="loadingScreen">
     <div class="spinner"></div>
@@ -15,9 +26,9 @@
 
     <header class="navbar" id="navbar">
     <div class="nav-container">
-      <img src="assets/selfLOGO.png" alt="Logo Self Park" class="nav-logo" id="homeLogo">
+      <img src="assets/logoAZUL_letraBRANCA.png" alt="Logo" class="nav-logo" onclick="window.location.href='index.html'">
       <nav class="nav-links">
-        <button class="nav-btn" id="reservarBtn"><a href="reservas.html" style="color:inherit;text-decoration:none;">Reservar</a></button>
+        <button class="nav-btn" id="reservarBtn"><a href="index.html" style="color:inherit;text-decoration:none;">Inicio</a></button>
         <button class="nav-btn" id="loginBtn"><a href="login.html" style="color:inherit;text-decoration:none;">Login</a></button>
         <button class="nav-btn" id="cadastroBtn"><a href="cadastro.html" style="color:inherit;text-decoration:none;">Cadastre-se</a></button>
       </nav>
@@ -66,8 +77,11 @@
       </div>
     </a>
   </section>
+  <br>
+  
+  
 
-  <footer class="footer">
+ <!-- <footer class="footer">
     <div class="footer-content">
       <img src="assets/logoAZUL_letraBRANCA.png" alt="Logo Self Park" class="footer-logo" id="footerLogo" />
       <div class="footer-buttons">
@@ -77,7 +91,7 @@
       </div>
       <p>© 2025 Self Park | Todos os direitos reservados</p>
     </div>
-  </footer>
+  </footer>-->
 
   
 
