--- a/confirmação.html
+++ b/confirmação.html
@@ -96,7 +96,7 @@
         </div>
       </div>
 
-      <button class="btn-pagar" id="btnProsseguir">
+      <button class="btn-pagar" id="btnProsseguir" onclick="window.location.href='pagamento.html'">
         Prosseguir com o Pagamento
         <span class="material-icons">arrow_forward_ios</span>
       </button>
