--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Self Park</title>
-  <link rel="shortcut icon" href="assets/logoAZUL_letraBRANCA.png">
+  <link rel="shortcut icon" href="assets/carrinhovrumvrum.png">
   <link rel="stylesheet" href="CSS/index.css" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
