--- a/confirmação.html
+++ b/confirmação.html
@@ -84,17 +84,23 @@
     <!-- Lado direito: Pagamento -->
     <div class="wallet-right">
 
-      <div class="preco-box">
-        <div class="preco-item">
-          <span>Valor da Reserva</span>
-          <span id="valorReserva">R$ 55,00</span>
-        </div>
+     <div class="preco-box">
+    <div class="preco-item">
+        <span>Valor Final</span>
+        <span id="valorFinal">R$ --,--</span>
+    </div>
 
-        <div class="preco-item total">
-          <span>Total</span>
-          <span id="valorTotal">R$ 55,00</span>
-        </div>
-      </div>
+    <div class="preco-item">
+        <span>Dias</span>
+        <span id="diasFinal">-- dias</span>
+    </div>
+
+    <div class="preco-item total">
+        <span>Total a Pagar</span>
+        <span id="valorFinal">R$ --,--</span>
+    </div>
+</div>
+
 
       <button class="btn-pagar" id="btnProsseguir" onclick="window.location.href='pagamento.html'">
         Prosseguir com o Pagamento
