--- a/eventos.html
+++ b/eventos.html
@@ -92,9 +92,9 @@
   <div class="real-events">
 
     <!-- EVENTO 1 -->
-    <a href="datetime.html" class="card"
+    <a href="ex.html" class="card"
       data-city="sp" data-type="show" data-start="2025-11-04" data-end="2025-12-11"
-      data-event-id="1234" data-local-id="32">
+      data-event-id="1234" data-local-id="32" >
 
       <div class="img-container">
         <img src="https://picsum.photos/640/400?random=11" alt="Vozes Negras">
@@ -102,7 +102,7 @@
 
       <div class="info">
         <h3>Vozes Negras</h3>
-        <p class="date"><span class="material-icons">event</span> 04/11 a 11/12/2025 • São Paulo</p>
+        <p class="date"><span class="material-icons" >event</span> 04/11 a 11/12/2025 • São Paulo</p>
       </div>
     </a>
 
