--- a/eventos.html
+++ b/eventos.html
@@ -107,7 +107,7 @@
     </a>
 
     <!-- EVENTO 2 -->
-    <a href="datetime.html" class="card"
+    <a href="ex.html" class="card"
       data-city="sp" data-type="esporte" data-start="2025-11-06" data-end="2025-11-06"
       data-event-id="1235" data-local-id="32">
 
