--- a/pagamento.html
+++ b/pagamento.html
@@ -90,7 +90,7 @@
             <form>
                 <div class="form-group">
                     <label>Número do Cartão</label>
-                    <input type="text" class="form-control" id="input-number" placeholder="0000 0000 0000 0000" maxlength="19">
+   s                 <input type="text" class="form-control" id="input-number" placeholder="0000 0000 0000 0000" maxlength="19">
                 </div>
                 <div class="form-group">
                     <label>Nome do Titular</label>
