--- a/eventos.html
+++ b/eventos.html
@@ -102,7 +102,7 @@
 
       <div class="info">
         <h3>Vozes Negras</h3>
-        <p class="date"><span class="material-icons" >event</span> 04/11 a 11/12/2025 • São Paulo</p>
+        <p class="date"><span class="material-icons" >event</span> 21/12/2025 • São Paulo</p>
       </div>
     </a>
 
@@ -117,12 +117,12 @@
 
       <div class="info">
         <h3>Palmeiras x Santos</h3>
-        <p class="date"><span class="material-icons">event</span> 06/11/2025 • Allianz Parque</p>
+        <p class="date"><span class="material-icons">event</span> 06/12/2025 • Allianz Parque</p>
       </div>
     </a>
 
     <!-- EVENTO 3 -->
-    <a href="datetime.html" class="card"
+    <a href="ex.html" class="card"
       data-city="sp" data-type="show" data-start="2025-11-06" data-end="2025-11-06"
       data-event-id="1236" data-local-id="32">
 
@@ -137,7 +137,7 @@
     </a>
 
     <!-- EVENTO 4 -->
-    <a href="datetime.html" class="card"
+    <a href="ex.html" class="card"
       data-city="rj" data-type="show" data-start="2025-12-02" data-end="2025-12-02"
       data-event-id="1237" data-local-id="77">
 
@@ -152,7 +152,7 @@
     </a>
 
     <!-- EVENTO 5 -->
-    <a href="datetime.html" class="card"
+    <a href="ex.html" class="card"
       data-city="bh" data-type="teatro" data-start="2025-12-10" data-end="2025-12-20"
       data-event-id="1238" data-local-id="55">
 
@@ -167,7 +167,7 @@
     </a>
 
     <!-- EVENTO 6 -->
-    <a href="datetime.html" class="card"
+    <a href="ex.html" class="card"
       data-city="cur" data-type="exposicao" data-start="2025-12-01" data-end="2025-12-18"
       data-event-id="1239" data-local-id="90">
 
